5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1577_579.log
== TEST (2019-03-16 11:09:29) 
-- CODE:
print("A UFAM tem  107 anos de fundação")
-- OUTPUT:
A UFAM tem  107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:09:38) 
-- CODE:
print("A UFAM tem  107 anos de fundação.")
-- OUTPUT:
A UFAM tem  107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:09:45) 
-- CODE:
print("A UFAM tem 107 anos de fundação.")
-- OUTPUT:
A UFAM tem 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:10:45) 
-- CODE:
print("A UFAM tem, 2016 - 1909, 107 anos de fundação.")
-- OUTPUT:
A UFAM tem, 2016 - 1909, 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:11:25) 
-- CODE:
print("A UFAM tem, 2016 - 1909, "107 anos de fundação.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem, 2016 - 1909, "107 anos de fundação.")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:11:35) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "107 anos de fundação.")
-- OUTPUT:
A UFAM tem 107 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:12:38) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "107 anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:12:48) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:12:52) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.211999
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
